--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "cssnano": "^2.1.1",
+    "lwip": "0.0.7",
     "marked": "^0.3.4",
     "mustache": "^2.1.3",
     "node-sass": "^3.2.0",
     "postcss": "^4.1.16",
+    "request": "^2.60.0",
     "uncss": "^0.12.1"
   }
 }
