--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mustache": "^2.1.3",
     "node-sass": "^3.2.0",
     "postcss": "^4.1.16",
+    "prismjs": "^1.2.0",
     "request": "^2.60.0",
     "uncss": "^0.12.1"
   }
