--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "cssnano": "^2.1.1",
-    "lwip": "0.0.7",
+    "autoprefixer": "^6.0.3",
+    "cssnano": "^3.3.1",
+    "lwip": "0.0.8",
     "marked": "^0.3.4",
     "mustache": "^2.1.3",
     "node-sass": "^3.2.0",
-    "postcss": "^4.1.16",
+    "postcss": "^5.0.10",
     "prismjs": "^1.2.0",
     "request": "^2.60.0",
     "uncss": "^0.12.1"
