--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "devDependencies": {
     "autoprefixer": "^6.0.3",
     "cssnano": "^3.3.1",
-    "lwip": "0.0.9",
+    "jimp": "0.6.0",
     "marked": "^0.3.4",
     "mustache": "^2.1.3",
-    "node-sass": "^4.1.1",
+    "node-sass": "^4.11.0",
     "postcss": "^5.0.10",
     "prismjs": "^1.2.0",
     "request": "^2.60.0",
